- Refactor app theme. - Add translations. - Refactor InfoCard to LinkButton.

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,4 +1,6 @@
 {
   "appLanguage": "en",
-  "appName": "Linkinbio"
+  "appName": "Linkinbio",
+  "title": "Software Developer",
+  "portfolio": "Portfolio"
 }
