--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -1,4 +1,6 @@
 {
   "appLanguage": "es",
-  "appName": "Linkinbio"
+  "appName": "Linkinbio",
+  "title": "Desarrollador de Software",
+  "portfolio": "Portafolio"
 }
