- Replace lint package for very_good_analysis. - Refactor code to use new lint rules. - Add github action workflow to build page on gh-branch.

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,4 +1,8 @@
 {
   "title": "Software Developer",
+  "androidApps": "Android Apps",
+  "iOSApps": "iOS Apps",
+  "gitHub": "GitHub",
+  "linkedIn": "LinkedIn",
   "portfolio": "Portfolio"
 }
