--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -1,4 +1,8 @@
 {
   "title": "Desarrollador de Software",
+  "androidApps": "Android Apps",
+  "iOSApps": "iOS Apps",
+  "gitHub": "GitHub",
+  "linkedIn": "LinkedIn",
   "portfolio": "Portafolio"
 }
