- Add social button. - Fix sizes on resize browser. - Refactor code. - Migrate localization translations to easy_localizations.

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,8 +1,4 @@
 {
-  "title": "Software Developer",
-  "androidApps": "Android Apps",
-  "iOSApps": "iOS Apps",
-  "gitHub": "GitHub",
-  "linkedIn": "LinkedIn",
+  "title": "Mobile App Developer",
   "portfolio": "Portfolio"
 }
