--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -1,8 +1,4 @@
 {
-  "title": "Desarrollador de Software",
-  "androidApps": "Android Apps",
-  "iOSApps": "iOS Apps",
-  "gitHub": "GitHub",
-  "linkedIn": "LinkedIn",
+  "title": "Desarrollador Apps Móviles",
   "portfolio": "Portafolio"
 }
